# y2notes

./: .editorconfig  .gitignore  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codemagic.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  distribute.yml  test.yml
RustData/: Cargo.toml  build_ios.sh
RustData/include/: y2data.h
RustData/src/: lib.rs  models.rs  persistence.rs
Y2Notes/: ContentView.swift  Info.plist  PrivacyInfo.xcprivacy  Y2Notes-Bridging-Header.h  Y2NotesApp.swift
Y2Notes.xcodeproj/: project.pbxproj
Y2Notes/Accessibility/: AccessibilityHelpers.swift
Y2Notes/Adapters/: ObservableInkEffectStore.swift  ObservableNoteStore.swift  ObservableSettingsStore.swift  ObservableThemeStore.swift  ObservableToolStore.swift
Y2Notes/Canvas/: CanvasConstants.swift  CanvasCoordinator+DiffUpdate.swift  CanvasCoordinatorBase.swift  CanvasPageCallbacks.swift  CanvasPageConfiguration.swift  CanvasPageDiff.swift  InfiniteCanvasPageView.swift  InfiniteCanvasView.swift  NoteEditorView+Canvas.swift  NotebookCanvasView.swift  NotebookCarouselView.swift  NotebookReaderView+Canvas.swift  ReaderCanvasView.swift
Y2Notes/Core/: ServiceContainer.swift
Y2Notes/Ink/: InkModels.swift  (+20 more)
Y2NotesTests/: InkEffectStoreTests.swift  NoteEncodingTests.swift
docs/: APP_STORE_COPY.md  ARCHITECTURE.md  DATA_MODEL_REFERENCE.md  INK_EFFECTS_DEEP_DIVE.md  MULTI_PAGE_DESIGN.md  PHASE_5_STATUS.md  PRIVACY_POLICY.md  ROADMAP.md  TERMS_OF_SERVICE.md  TESTING_STRATEGY.md
(+209 files in other folders)
